Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body, html {
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
-  height: 95vh;
+  height: 100vh;
 }
 
 .first {
